--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <img src="Logo.jpeg" alt="Awesome Gamerz Logo" width="200">
         </div>
         <div class="content">
-            <p>This website is dedicated to farming simulation enthusiasts. Stay tuned for updates!</p>
+            <p>This website is dedicated to Farming Simulator 25 enthusiasts. Stay tuned for updates!</p>
         </div>
     </main>
     <footer>
