Fix wrong info on home page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-Dit is mijn main page van mijn webpagina:
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -137,7 +136,8 @@ Dit is mijn main page van mijn webpagina:
         <div class="content">
             <p>This website is dedicated to Farming Simulator 25 enthusiasts. Stay tuned for updates!</p>
             <p>Join our farming simulation community and experience the best gaming adventures.</p>
-            <p>We are an all Dutch Server</p>
+            <p>We are an all Dutch Server/Community</p>
+            
             <a href="https://discord.gg/2dE69rEQyk" target="_Blank" class="discord-button">Join Our Discord</a>
         </div>
         <!-- Container 1 -->
