Added Twitch event recap video to homepage

--- a/index.html
+++ b/index.html
@@ -129,10 +129,9 @@
 <body>
     <header>
         <img src="./assets/images/banner.jpeg" alt="Banner" class="banner">
-        <!-- <a href="/profile.html" class="login-button">Login with Discord</a> -->
     </header>
     <main>
-        <h1>Welcome to Awesome Gamerz!</h1>
+        <h1>Welcome to Awesome-Gamerz !</h1>
         <div class="content">
             <p>This website is dedicated to Farming Simulator 25 enthusiasts. Stay tuned for updates!</p>
             <p>Join our farming simulation community and experience the best gaming adventures.</p>
@@ -140,6 +139,17 @@
             
             <a href="https://discord.gg/2dE69rEQyk" target="_Blank" class="discord-button">Join Our Discord</a>
         </div>
+        <div class="container" id="twitch">
+            <p> Last event stream recap</p>
+            <iframe src="https://player.twitch.tv/?video=2364316732&t=02h07m38s&parent=127.0.0.1&muted=true" 
+                frameborder="0" 
+                allowfullscreen="true" 
+                scrolling="no" 
+                height="378" 
+                width="auto">
+            </iframe>
+            <p></p> 
+        </div> 
         <!-- Container 1 -->
         <div class="container" id="container1">
         <p> Awesome-Gamerz.com Dedi Server </p>
@@ -148,12 +158,13 @@
         </div>
         <!-- Container 2 -->
         <div class="container" id="container2">
-            <p> Awesome-Gamerz.com Dedi Server Crossplay </p>
+            <p> Awesome-Gamerz.com Dedi Server 2 </p>
             <p></p>
-        </div>     
+        </div>
+               
     </main>
     <footer>
-        <p>&copy; 2025 Awesome Gamerz. All rights reserved.</p>
+        <p>&copy; 2025 Awesome-Gamerz.com All rights reserved.</p>
     </footer>
 </body>
 </html>
