Adjust video preview ratio

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             background-color: #45a049;
         }
         .live-button {
-            position: left
+            position: left;
             top: 20px;
             right: 50px;
             padding: 10px 20px;
@@ -142,11 +142,11 @@
         <div class="container" id="twitch">
             <p> Last event stream recap</p>
             <iframe id="twitch-iframe"
-                frameborder="0" 
+                frameborder="1" 
                 allowfullscreen="true" 
                 scrolling="no" 
-                height="378" 
-                width="auto">
+                height="430px" 
+                width="100%">
             </iframe>
             <p></p> 
         </div>
