--- a/live1.html
+++ b/live1.html
@@ -81,7 +81,7 @@
         <img src="./assets/images/banner.jpeg" alt="Banner" class="banner">
         <!-- <a href="/profile.html" class="login-button">Login with Discord</a> -->
     </header>
-    <h1>Awesome-Gamerz.com Server 1 Live Map</h1>
+    <h1>Awesome-Gamerz.com Server 1 Map Preview</h1>
     <p> Development in progres....</p>
     <div id="map"></div>
 
