added visitors count

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
     <footer>
         <p>&copy; 2025 Awesome-Gamerz.com All rights reserved.</p>
     </footer>
+    <div class="visitor-counter">
+        <p>Visitors: <span id="visitor-count">0</span></p>
+    </div>
     <script src="./assets/js/scripts.js"></script>
 </body>
 </html>
