--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav class="navbar">
             <ul class="nav-list" id="nav-list">
                 <li><a href="index.html">Home</a></li>
-                <!--<li><a href="about.html">About</a></li>-->
+                <li><a href="discord.html">Discord</a></li>
                 <!--<li><a href="contact.html">Contact</a></li>-->
                 <!-- Dynamically added links will appear here -->
             </ul>
@@ -25,10 +25,6 @@
             <p>Join our farming simulation community and experience the best gaming adventures.</p>
             <p>We are an all Dutch Server/Community 18+ Only</p>
             
-            <a href="https://discord.gg/2dE69rEQyk" target="_Blank" class="discord-button">Join Our Discord</a>
-            <div class="discord-widget">
-                <iframe src="https://discord.com/widget?id=1323193852445724682&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
-            </div>
         </div>
         <div class="container-wrapper" id="twitch-profiles">
             <div class="container">
