--- a/discord.html
+++ b/discord.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery - Awesome-Gamerz.com</title>
+    <title>Awesome-Gamerz.com</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
@@ -13,14 +13,17 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="discord.html">Discord</a></li>
                 <!--<li><a href="contact.html">Contact</a></li>-->
+                <!-- Dynamically added links will appear here -->
             </ul>
         </nav>
         <img src="./assets/images/banner.jpeg" alt="Banner" class="banner">
     </header>
     <main>
-        <h1>Gallery</h1>
-        <div class="gallery" id="gallery">
-            <!-- Images will be dynamically added here -->
+           
+            <a href="https://discord.gg/2dE69rEQyk" target="_Blank" class="discord-button">Join Our Discord</a>
+            <div class="discord-widget">
+                <iframe src="https://discord.com/widget?id=1323193852445724682&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+            </div>
         </div>
     </main>
     <footer>
@@ -28,10 +31,6 @@
     </footer>
     <div class="visitor-counter">
         <p>Visitors: <span id="visitor-count">0</span></p>
-    </div>
-    <div id="lightbox" class="lightbox">
-        <span class="close">&times;</span>
-        <img class="lightbox-content" id="lightbox-img">
     </div>
     <script src="./assets/js/scripts.js"></script>
 </body>
