--- a/discord.html
+++ b/discord.html
@@ -19,7 +19,8 @@
         <img src="./assets/images/banner.jpeg" alt="Banner" class="banner">
     </header>
     <main>
-           
+        <div>
+            <div>
             <a href="https://discord.gg/2dE69rEQyk" target="_Blank" class="discord-button">Join Our Discord</a>
             <div class="discord-widget">
                 <iframe src="https://discord.com/widget?id=1323193852445724682&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
